--- a/asce-7-load-combinations.html
+++ b/asce-7-load-combinations.html
@@ -143,7 +143,7 @@
 
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/engineering.html">Engineering</a> / <a href="https://calcdomain.com/structural.html">Structural</a> / ASCE 7 Load Combinations
+<a href="/">Home</a> / <a href="https://calcdomain.com/engineering.html">Engineering</a> / <a href="https://calcdomain.com/subcategories/structural-engineering.html">Structural</a> / ASCE 7 Load Combinations
     </nav>
 <h1>ASCE 7-16/22 Load Combinations — Pro Calculator</h1>
 <p>This professional-grade calculator assembles LRFD (§2.3), ASD (§2.4), and service-level (Appendix C-style) combinations. It ranks the governing case, shows the full math trace, and lets you share, print to PDF, or export JSON.</p>
