--- a/structural.html
+++ b/structural.html
@@ -1,178 +1,16 @@
 <!DOCTYPE html>
-<html lang="en"><head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<!-- Required meta -->
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Structural Engineering Calculators | CalcDomain</title>
-<meta content="Structural engineering calculators for loads &amp; combinations (ASCE 7-22), reinforced concrete (ACI 318), steel (AISC), wood (AWC NDS), masonry, member analysis, and Eurocodes (EC2/3/4/5/6/8). Transparent formulas, instant results." name="description"/>
-<meta content="CalcDomain" name="author"/>
-<!-- canonical -->
-<link href="https://calcdomain.com/structural.html" rel="canonical"/>
-<!-- Favicon -->
-<link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
-<link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
-<link href="/favicon-48x48.png" rel="icon" sizes="48x48" type="image/png"/>
-<link href="/favicon-64x64.png" rel="icon" sizes="64x64" type="image/png"/>
-<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
-<link href="/icon-512x512.png" rel="icon" sizes="512x512" type="image/png"/>
-<link href="/manifest.json" rel="manifest"/>
-<meta content="#333333" name="theme-color"/>
-<!-- Fonts & CSS -->
-<link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;family=Source+Code+Pro:wght@400;600&amp;display=swap" rel="stylesheet"/>
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=/subcategories/structural-engineering.html">
+  <title>Structural Engineering Calculators | CalcDomain</title>
+  <link rel="canonical" href="https://calcdomain.com/subcategories/structural-engineering.html">
+  <meta name="robots" content="noindex, follow">
+  <script>
+    window.location.replace("/subcategories/structural-engineering.html");
+  </script>
 </head>
 <body>
-<a class="skip-link" href="#main-content">Skip to main content</a>
-<!-- Header -->
-
-<main class="main-content" id="main-content">
-<div class="container">
-<!-- breadcrumb -->
-<nav style="margin-bottom: 1rem; font-size: 0.9rem; color: var(--muted-text-color);">
-<a href="/">Home</a> / <a href="https://calcdomain.com/engineering.html">Engineering</a> / <a aria-current="page" href="https://calcdomain.com/structural.html">Structural</a>
-</nav>
-<h1>Structural Engineering Calculators</h1>
-<p style="max-width: 920px;">
-        Design members and connections in concrete, steel, wood, and masonry; combine loads per current standards; and
-        check serviceability and stability. Each tool shows formulas, factors, and intermediate results you can trace.
-      </p>
-<!-- Loads & Combinations -->
-<section aria-labelledby="loads" style="margin-top:2rem;">
-<h2 id="loads">Loads &amp; Combinations (ASCE 7-22)</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/asce-7-22-load-combination-calculator-asd-lrfd.html"><h3>Load Combination Calculator</h3><p>ASD &amp; LRFD combos with governing case.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-22-dead-load-calculator.html"><h3>Dead Load Calculator</h3><p>Common materials &amp; assemblies.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-22-live-load-calculator.html"><h3>Live Load Calculator</h3><p>Occupancy-based floor &amp; roof loads.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-22-wind-load-calculator-main-wind-force-resisting-system.html"><h3>Wind Load (MWFRS)</h3><p>Main system pressures by exposure.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-22-wind-load-calculator-components-and-cladding.html"><h3>Wind Load (C&amp;C)</h3><p>Zone pressures for components &amp; cladding.</p></a>
-<a class="card" href="https://calcdomain.com/asce-7-22-seismic-design-calculator.html"><h3>Seismic Design</h3><p>Design spectra from SS, S1 &amp; site class.</p></a>
-</div>
-</section>
-<!-- Concrete (ACI 318) -->
-<section aria-labelledby="concrete" style="margin-top:2rem;">
-<h2 id="concrete">Reinforced Concrete (ACI 318)</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/aci-318-concrete-beam-flexural-strength-calculator.html"><h3>Beam Flexure</h3><p>ϕMn for singly/doubly reinforced beams.</p></a>
-<a class="card" href="https://calcdomain.com/aci-318-concrete-beam-shear-strength-calculator.html"><h3>Beam Shear</h3><p>Concrete + stirrups; ϕVn checks.</p></a>
-<a class="card" href="https://calcdomain.com/aci-318-concrete-slab-punching-shear-calculator.html"><h3>Punching Shear (Slabs)</h3><p>Two-way shear at columns/openings.</p></a>
-<a class="card" href="https://calcdomain.com/aci-318-concrete-column-design-calculator.html"><h3>Column Design</h3><p>Axial-flexure interaction capacity.</p></a>
-<a class="card" href="https://calcdomain.com/aci-318-reinforcement-development-length-calculator-tension.html"><h3>Dev. Length (Tension)</h3><p>ld with size/coating/location factors.</p></a>
-<a class="card" href="https://calcdomain.com/aci-318-reinforcement-development-length-calculator-compression.html"><h3>Dev. Length (Compression)</h3><p>Anchorage for bars in compression.</p></a>
-<a class="card" href="https://calcdomain.com/aci-318-concrete-footing-design-calculator.html"><h3>Footing Design</h3><p>One-way, two-way shear &amp; bearing.</p></a>
-<a class="card" href="https://calcdomain.com/concrete-crack-width-calculator-eurocode-2.html"><h3>Crack Width (EC2)</h3><p>Service crack control per EC2.</p></a>
-</div>
-</section>
-<!-- Steel (AISC) -->
-<section aria-labelledby="steel" style="margin-top:2rem;">
-<h2 id="steel">Structural Steel (AISC)</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/steel-beam-design-calculator-aisc.html"><h3>Steel Beam Design</h3><p>Flexure, shear &amp; deflection checks.</p></a>
-<a class="card" href="https://calcdomain.com/steel-column-design-calculator-aisc.html"><h3>Steel Column Design</h3><p>Axial capacity &amp; buckling.</p></a>
-<a class="card" href="https://calcdomain.com/steel-base-plate-design-calculator-aisc.html"><h3>Base Plate Design</h3><p>Plate thickness, bearing, anchors.</p></a>
-<a class="card" href="https://calcdomain.com/steel-bolted-connection-calculator-aisc.html"><h3>Bolted Connection</h3><p>Shear, bearing &amp; tear-out.</p></a>
-<a class="card" href="https://calcdomain.com/steel-welded-connection-calculator-aisc.html"><h3>Welded Connection</h3><p>Fillet/groove weld capacities.</p></a>
-<a class="card" href="https://calcdomain.com/composite-beam-design-calculator-aisc.html"><h3>Composite Beam</h3><p>Stud count &amp; composite strength.</p></a>
-<a class="card" href="https://calcdomain.com/open-web-steel-joist-k-series-calculator.html"><h3>Open Web Joist (K)</h3><p>Span/load checks for K-series.</p></a>
-<a class="card" href="https://calcdomain.com/crane-runway-beam-design-calculator.html"><h3>Crane Runway Beam</h3><p>Fatigue &amp; LTB considerations.</p></a>
-<a class="card" href="https://calcdomain.com/moment-of-inertia-calculator-steel-shapes.html"><h3>Section Properties</h3><p>I, S, Z, r for common shapes.</p></a>
-</div>
-</section>
-<!-- Wood (AWC NDS) -->
-<section aria-labelledby="wood" style="margin-top:2rem;">
-<h2 id="wood">Wood (AWC NDS)</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/awc-nds-wood-beam-design-calculator-bending-shear.html"><h3>Wood Beam</h3><p>Bending, shear &amp; deflection with factors.</p></a>
-<a class="card" href="https://calcdomain.com/awc-nds-wood-column-design-calculator.html"><h3>Wood Column</h3><p>Axial capacity &amp; slenderness.</p></a>
-<a class="card" href="https://calcdomain.com/awc-nds-wood-connection-calculator-bolts.html"><h3>Bolted Connection</h3><p>Z-values &amp; patterns.</p></a>
-<a class="card" href="https://calcdomain.com/awc-nds-wood-connection-calculator-nails.html"><h3>Nailed Connection</h3><p>Withdrawal &amp; lateral capacities.</p></a>
-</div>
-</section>
-<!-- Masonry -->
-<section aria-labelledby="masonry" style="margin-top:2rem;">
-<h2 id="masonry">Masonry Design</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/masonry-wall-design-calculator-asd.html"><h3>Masonry Wall</h3><p>Flexure, shear &amp; axial (ASD).</p></a>
-<a class="card" href="https://calcdomain.com/masonry-lintel-design-calculator.html"><h3>Masonry Lintel</h3><p>Openings with bearing checks.</p></a>
-<a class="card" href="https://calcdomain.com/masonry-shear-wall-design-calculator.html"><h3>Shear Wall</h3><p>In-plane shear &amp; overturning.</p></a>
-<a class="card" href="https://calcdomain.com/masonry-column-design-calculator.html"><h3>Masonry Column</h3><p>Axial capacity &amp; slenderness.</p></a>
-</div>
-</section>
-<!-- Analysis & Serviceability -->
-<section aria-labelledby="analysis" style="margin-top:2rem;">
-<h2 id="analysis">Member Analysis &amp; Serviceability</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/beam-deflection-calculator.html"><h3>Beam Deflection</h3><p>Common load cases &amp; superposition.</p></a>
-<a class="card" href="https://calcdomain.com/buckling-load-calculator-euler.html"><h3>Buckling Load (Euler)</h3><p>Critical load with end conditions.</p></a>
-<a class="card" href="https://calcdomain.com/plate-bending-calculator-fea.html"><h3>Plate Bending (FEA)</h3><p>Thin plate deflection &amp; stress.</p></a>
-<a class="card" href="https://calcdomain.com/influence-line-diagram-generator.html"><h3>Influence Lines</h3><p>Shear/moment influence functions.</p></a>
-<a class="card" href="https://calcdomain.com/mohrs-circle-calculator.html"><h3>Mohr’s Circle</h3><p>Stress transformation &amp; τmax.</p></a>
-<a class="card" href="https://calcdomain.com/thermal-stress-calculator.html"><h3>Thermal Stress</h3><p>Constrained ΔT effects.</p></a>
-</div>
-</section>
-<!-- Eurocodes -->
-<section aria-labelledby="eurocodes" style="margin-top:2rem;">
-<h2 id="eurocodes">Eurocode Design (EC2/EC3/EC4/EC5/EC6/EC8)</h2>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<!-- EC2 Concrete -->
-<a class="card" href="https://calcdomain.com/eurocode-2-concrete-beam-flexural-design-calculator.html"><h3>EC2 Beam Flexure</h3><p>Bending design per EN 1992-1-1.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-concrete-beam-shear-design-calculator.html"><h3>EC2 Beam Shear</h3><p>VRd,c &amp; VRd,s checks.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-concrete-slab-punching-shear-calculator.html"><h3>EC2 Punching Shear</h3><p>vEd vs. vRd,c,vRd,max.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-concrete-column-design-calculator.html"><h3>EC2 Column</h3><p>Interaction N-M design.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-2-reinforcement-anchorage-lap-length-calculator.html"><h3>EC2 Anchorage &amp; Laps</h3><p>lb,net &amp; lap splices.</p></a>
-<!-- EC3 Steel -->
-<a class="card" href="https://calcdomain.com/eurocode-3-steel-beam-bending-shear-resistance-calculator.html"><h3>EC3 Steel Beam</h3><p>Class, bending &amp; shear resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-3-steel-column-compression-buckling-calculator.html"><h3>EC3 Steel Column</h3><p>χ·A·fy buckling resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-3-bolted-connection-design-calculator.html"><h3>EC3 Bolted Joints</h3><p>Shear/bearing slip-resistant.</p></a>
-<!-- EC4 Composite -->
-<a class="card" href="https://calcdomain.com/eurocode-4-composite-beam-design-calculator.html"><h3>EC4 Composite Beam</h3><p>Studs &amp; composite resistance.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-4-composite-column-design-calculator.html"><h3>EC4 Composite Column</h3><p>Composite column capacity.</p></a>
-<!-- EC5 Timber -->
-<a class="card" href="https://calcdomain.com/eurocode-5-timber-beam-design-calculator.html"><h3>EC5 Timber Beam</h3><p>kmod, kdef &amp; ULS/SLS checks.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-5-timber-column-design-calculator.html"><h3>EC5 Timber Column</h3><p>Axial capacity &amp; buckling.</p></a>
-<!-- EC6 Masonry -->
-<a class="card" href="https://calcdomain.com/eurocode-6-masonry-wall-design-calculator.html"><h3>EC6 Masonry Wall</h3><p>Compressive &amp; bending design.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-6-masonry-shear-wall-design-calculator.html"><h3>EC6 Masonry Shear</h3><p>In-plane shear resistance.</p></a>
-<!-- EC8 Seismic (building response) -->
-<a class="card" href="https://calcdomain.com/eurocode-8-inter-storey-drift-calculator.html"><h3>EC8 Inter-Storey Drift</h3><p>Drift limits &amp; checks.</p></a>
-<a class="card" href="https://calcdomain.com/eurocode-8-capacity-design-calculator.html"><h3>EC8 Capacity Design</h3><p>Strong-column/weak-beam rules.</p></a>
-</div>
-</section>
-<!-- Note -->
-<section aria-labelledby="note" style="margin-top:2rem;">
-<h2 class="sr-only" id="note">Standards note</h2>
-<div aria-label="Standards note" class="callout callout-info" role="note" style="max-width:920px;">
-          These tools summarize common provisions from major codes. Always confirm load cases, partial factors, resistance
-          factors, material grades, and jurisdictional amendments valid for your project.
-        </div>
-</section>
-</div>
-</main>
-<!-- Footer -->
-
-<!-- Scripts -->
-
-
-</body></html>
+  <p>Redirecting to <a href="/subcategories/structural-engineering.html">Structural Engineering Calculators</a>...</p>
+</body>
+</html>
