--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalcDomain - Free Online Calculators for Every Need</title>
-    <meta name="description" content="Access over 1700 free online calculators at CalcDomain. From financial planning to health metrics, math conversions to construction projects - find the perfect calculator for any calculation.">
+    <meta name="description" content="Access 1700+ free online calculators at CalcDomain. From financial planning to health metrics, math conversions to construction projects - find the perfect calculator for any calculation.">
     <script src="search.js" defer></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
