--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         .category-gradient { background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); }
     </style>
     <style>
-        /* CalcDomain Search Styles */
+        /* CalcDomain Search Styles! */
         .search-highlight {
             background: linear-gradient(120deg, #fbbf24 0%, #f59e0b 100%);
             padding: 2px 4px;
-            border-radius: 4px;
+            border-radius: 4px;localhost
             font-weight: 600;
             color: #78350f;
         }
