--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
             </div>
           </div>
           
-          <!-- NAVIGATION LINKS -->
+          <!-- NAVIGATION  LINKS -->
           <div class="hidden md:flex items-center space-x-6">
             <a href="search.html" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
             <a href="#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
           </div>
           
-          <!-- MOBILE TOGGLE (ARIA  added) -->
+          <!-- MOBILE TOGGLE (ARIA ARE added) -->
           <button
             id="mobile-menu-toggle"
             class="md:hidden p-2"
