--- a/mortgage-affordability-calculator.html
+++ b/mortgage-affordability-calculator.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mortgage Affordability Calculator 2024 – How Much House Can I Afford? | CalcDomain</title>
   <meta name="description" content="Calculate how much house you can afford with CFPB-compliant DTI ratios. Includes FHA, VA, and conventional loan calculations with detailed breakdown of monthly payments, closing costs, and affordability range.">
-  <link rel="canonical" href="mortgage-affordability.html">
+  <link rel="canonical" href="https://calcdomain.com/mortgage-affordability-calculator.html">
   
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
     "@context": "https://schema.org",
     "@type": "WebApplication",
     "name": "Mortgage Affordability Calculator",
-    "url": "https://calcdomain.com/mortgage-affordability.html",
+    "url": "https://calcdomain.com/mortgage-affordability-calculator.html",
     "description": "CFPB-compliant mortgage affordability calculator with DTI ratio calculations for conventional, FHA, and VA loans.",
     "applicationCategory": "FinanceApplication",
     "author": { "@type": "Person", "name": "Ugo Candido" },
