--- a/subcategories/core-math-algebra.html
+++ b/subcategories/core-math-algebra.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
+<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
+<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Core Math & Algebra Calculators - Professional Tools for Core Math & Algebra</title>
@@ -19,7 +19,7 @@
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
     <!-- Ezoic, Google AdSense, GSC, and GA scripts would go here -->
-<script src="search.js" defer></script>
+<script src="https://calcdomain.com/search.js" defer></script>
 <!-- MathJax for LaTeX formulas -->
 <script>
   window.MathJax = {
@@ -31,8 +31,8 @@
   };
 </script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
+<link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
 
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -355,7 +355,7 @@
                                     <h3 class="font-semibold text-gray-800">Matrix Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate matrix calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/vector-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/vector.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -395,7 +395,7 @@
                                     <h3 class="font-semibold text-gray-800">Graphing Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate graphing calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/coordinate-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/coordinate-calccalculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
