--- a/payroll-calculator.html
+++ b/payroll-calculator.html
@@ -138,7 +138,7 @@
 
         <!-- 1) H1 -->
         <div id="print-section" class="bg-white p-6 rounded-lg shadow-sm">
-          <h1 class="text-3xl font-extrabold tracking-tight mb-2">payroll calculator</h1>
+          <h1 class="text-3xl font-extrabold tracking-tight mb-2">Payroll Calculator</h1>
 
           <!-- 2) Intro -->
           <p class="text-gray-700 mb-6">
@@ -423,10 +423,10 @@
           <div class="bg-white p-6 rounded-lg shadow-sm">
             <h3 class="font-bold text-lg mb-4">Related finance tools</h3>
             <ul class="space-y-3 text-sm">
-              <li><a class="text-blue-700 hover:underline" href="salary-to-hourly-calculator.html">Salary ↔ Hourly Converter</a></li>
-              <li><a class="text-blue-700 hover:underline" href="overtime-calculator.html">Overtime Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="bonus-gross-up-calculator.html">Bonus Gross-Up Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="tax-bracket-calculator.html">Tax Bracket Estimator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/salary-to-hourly-calculator.html">Salary ↔ Hourly Converter</a></li>
+              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/overtime-calculator.html">Overtime Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/bonus-gross-up-calculator.html">Bonus Gross-Up Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="https://calcdomain.com/tax-bracket-calculator.html">Tax Bracket Estimator</a></li>
             </ul>
           </div>
         </div>
@@ -438,10 +438,10 @@
     <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
       <p>&copy; 2025 CalcDomain. All rights reserved.</p>
       <div class="mt-4 space-x-4">
-        <a href="about.html" class="hover:text-blue-700">About</a>
-        <a href="contact.html" class="hover:text-blue-700">Contact</a>
-        <a href="privacy.html" class="hover:text-blue-700">Privacy</a>
-        <a href="terms.html" class="hover:text-blue-700">Terms</a>
+        <a href="https://calcdomain.com/about.html" class="hover:text-blue-700">About</a>
+        <a href="https://calcdomain.com/contact.html" class="hover:text-blue-700">Contact</a>
+        <a href="https://calcdomain.com/privacy.html" class="hover:text-blue-700">Privacy</a>
+        <a href="https://calcdomain.com/terms.html" class="hover:text-blue-700">Terms</a>
       </div>
     </div>
   </footer>
